--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="div">asdadasd</div>
+		<div class="div">
+			asdadasd
+			<h2>Приветствие</h2>
+		</div>
 	</body>
 </html>
