--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<div class="div">
 			asdadasd
 			<h2>Приветствие</h2>
+			<h2>Приветствие</h2>
+			<h2>Приветствие</h2>
+			<h2>досвидания</h2>
 		</div>
 	</body>
 </html>
