--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	</head>
 	<body>
 		<div class="div">
-			<button>здорова, как дела?</button>
+			asdadasd
+			<h2>Приветствие</h2>
+			<h2>Приветствие</h2>
+			<h2>Приветствие</h2>
+			<h2>досвидания</h2>
 		</div>
 	</body>
 </html>
